* Added support for path parameters methods in RestAssuredMockMvc (#1723) (thanks to Jefersom Martins for pull request)
* Make header blacklisting case-insensitive (#1722) (thanks to Bekh-Ivanov Aleksey for pull request)

Changelog 5.3.1 (2023-06-16)
----------------------------
* Upgraded Guava library to 32.0.1-jre
* Fixed "Unexpected logic in PathSupport.getPath" (issue 1682) (thanks to fucct for pull request)
* Fixed "Not able to POST xml file using Inpustream" (issue 1160) (thanks to Balasaravanan for pull request)
* Fixed "MockMvcRequestSenderImpl convertCookies function is not copying the httpOnly, sameSite and expires from the servletCookies into the cookieBuilder" (issue 1462) (thanks to Justin Tay for pull request))
* Fixed "Accept cookies that have an expiration date" (issue 1430) (thanks to Stéphane Épardaud for pull request)
* Upgraded the Kotlin extension module to use Kotlin 1.8.22
* Upgraded Groovy to 4.0.11
* Upgraded faster jackson to 2.14.3
* Upgraded Hamcrest to 2.2

Changelog 5.3.0 (2022-11-18)
----------------------------
* Added (much) improved support for CSRF tokens when sent as a header and not in a form
* Enable the use of relaxedHTTPSValidation with two-way ssl (issue #1631) (thanks to Mathieu Amblard for pull request)
* Lastest Spring Framework 6 is now supported again (thanks to Marcin Grzejszczak for pull request)
* Removed content assignment from asPrettyString() (thanks to Bartłomiej Chabowski for pull request)
* Allow contentType() to accept Spring MediaType in Spring MockMvc module (thanks to Hantsy Bai for pull request)
* Upgraded kotlin from 1.7.10 to 1.7.20 in the kotlin module
* Upgraded groovy from 4.0.1 to 4.0.6
* Updated jackson from version 2.13.2 to 2.13.4

Changelog 5.2.1 (2022-11-18)
----------------------------
* Lastest Spring Framework 6 is now supported again (thanks to Marcin Grzejszczak for pull request)

Changelog 5.2.0 (2022-09-09)
----------------------------