@@ -107,15 +107,7 @@ public class RequestLoggingFilter implements Filter {
      * @param showUrlEncodedUri Whether or not to show the request URI as url encoded
      */
     public RequestLoggingFilter(LogDetail logDetail, boolean shouldPrettyPrint, PrintStream stream, boolean showUrlEncodedUri) {
-        this(logDetail, shouldPrettyPrint, stream, showUrlEncodedUri, defaultBlacklistedHeaders());
-    }
-
-    private static Set<String> defaultBlacklistedHeaders() {
-        TreeSet<String> caseInsensitiveBlacklistedHeaders = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
-        caseInsensitiveBlacklistedHeaders.add("Authorization");
-        caseInsensitiveBlacklistedHeaders.add("Proxy-Authorization");
-        caseInsensitiveBlacklistedHeaders.add("Cookie");
-        return caseInsensitiveBlacklistedHeaders;
+        this(logDetail, shouldPrettyPrint, stream, showUrlEncodedUri, new TreeSet<>(String.CASE_INSENSITIVE_ORDER));
     }
 
     /**
