@@ -3,6 +3,7 @@ Changelog next version
 * Add onFailMessage into validatable response (#1724). This means that you can use `onFailMessage` after `then` like: `when().get("/somewhere").then().onFailMessage("My fail message").statusCode(200);` (thanks to Ilya Koshaleu for pull request)
 * Added support for path parameters methods in RestAssuredMockMvc (#1723) (thanks to Jefersom Martins for pull request)
 * Make header blacklisting case-insensitive (#1722) (thanks to Bekh-Ivanov Aleksey for pull request)
+* Blacklisted headers added to LogConfig are now case-insensitive by default
 
 Changelog 5.3.1 (2023-06-16)
 ----------------------------
